--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=backend
+spring.data.mongodb.uri=mongodb+srv://juanvila:mimamamemima@bdejemplo.n1lqxae.mongodb.net/?retryWrites=true&w=majority&appName=BDEjemplo
+spring.data.mongodb.database=BDEjemplo
