--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+# Inicio de bd
 spring.application.name=backend
 spring.data.mongodb.uri=mongodb+srv://juanvila:mimamamemima@bdejemplo.n1lqxae.mongodb.net/?retryWrites=true&w=majority&appName=BDEjemplo
 spring.data.mongodb.database=Proyecto2
+# Fin de bd
+
+# Inicio de actuator
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+
+# Fin de actuator
